[package]
name = "tar-downloader"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
flate2 = "1.0.22"
reqwest = { version = "0.11.10", features = ["blocking"] }
tar = "0.4.38"

[profile.release]
strip="debuginfo"
